//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  username String [unique, not null]
  name String [not null]
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  description String [not null]
  po String [default: '']
  shopvox String [default: '']
  salesOrder String [default: '']
  qty Int [not null]
  shipBy DateTime [not null]
  shippingMethod String [default: 'courier']
  status PStatus [not null, default: 'CREATED']
  customFields String [default: '']
  isManual Boolean [not null, default: false]
  billingAddress String [not null]
  shippingAddress String [not null]
  billingContactId String
  billingContact Customer
  shippingContactId String
  shippingContact Customer
  boxes BoxContent [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Customer {
  id String [pk]
  name String [not null]
  company String [not null]
  street String [not null]
  city String [not null]
  state String [not null]
  zip String [not null]
  country String [not null]
  billedTo Product [not null]
  shippedTo Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Box {
  id String [pk]
  name String [default: '']
  status BStatus [not null, default: 'CREATED']
  contents BoxContent [not null]
  deliveryId String
  delivery Delivery
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BoxContent {
  id String [pk]
  productId String [not null]
  product Product [not null]
  qty Int [not null]
  boxId String [not null]
  box Box [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Delivery {
  id String [pk]
  shipTo String [not null]
  billTo String [not null]
  boxes Box [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum PStatus {
  CREATED
  PARTIAL_IN_BOX
  ALL_IN_BOX
  SHIPPED
}

Enum BStatus {
  CREATED
  SHIPPED
}

Ref: Product.billingContactId > Customer.id

Ref: Product.shippingContactId > Customer.id

Ref: Box.deliveryId > Delivery.id

Ref: BoxContent.productId > Product.id

Ref: BoxContent.boxId > Box.id